--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,23 +1,24 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Writing your PhD thesis in \texorpdfstring{\\ \LaTeX2e}{LaTeX2e}}
+% \title{Writing your PhD thesis in \texorpdfstring{\\ \LaTeX2e}{LaTeX2e}}
+\title{Mapping Unikernels with TAG based architectures}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
 
 %% Subtitle (Optional)
-\subtitle{Using the CUED template}
+% \subtitle{Using the CUED template}
 
 %% The full name of the author
-\author{Krishna Kumar}
+\author{Akilan Selvacoumar}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
-\dept{Department of Engineering}
+\dept{Mathematics and Computer Sciences}
 
 %% University and Crest
-\university{University of Cambridge}
+\university{Heriot Watt University}
 % Crest minimum should be 30mm.
-\crest{\includegraphics[width=0.2\textwidth]{University_Crest}}
+\crest{\includegraphics[width=0.2\textwidth]{heriot-watt-university.png}}
 %% Use this crest, if you are using the college crest
 %% Crest long miminum should be 65mm
 %\crest{\includegraphics[width=0.45\textwidth]{University_Crest_Long}}
@@ -57,13 +58,13 @@
 %% You can redefine the submission text:
 % Default as per the University guidelines:
 % ``This dissertation is submitted for the degree of''
-%\renewcommand{\submissiontext}{change the default text here if needed}
+\renewcommand{\submissiontext}{Year 1 progression report of:}
 
 %% Full title of the Degree
 \degreetitle{Doctor of Philosophy}
 
 %% College affiliation (optional)
-\college{King's College}
+% \college{King's College}
 
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
