--- a/thesis.tex
+++ b/thesis.tex
@@ -134,9 +134,17 @@
 % ******************************** Main Matter *********************************
 \mainmatter
 
-\include{Chapter1/chapter1}
-\include{Chapter2/chapter2}
-\include{Chapter3/chapter3}
+\include{Introduction/introduction}
+\include{Motivation/motivation}
+\include{ResearchQuestions/researchQuestions}
+\include{LiteratureReview/literatureReview}
+\include{Expirements/expirements}
+\include{ResearchGoals/researchGoals}
+\include{ResearchTimeline/researchTimeline}
+\include{Conclusion/conclusion}
+% \include{Chapter1/chapter1}
+% \include{Chapter2/chapter2}
+% \include{Chapter3/chapter3}
 %\include{Chapter4/chapter4}
 %\include{Chapter5/chapter5}
 %\include{Chapter6/chapter6}
@@ -176,8 +184,8 @@
 
 \begin{appendices} % Using appendices environment for more functunality
 
-\include{Appendix1/appendix1}
-\include{Appendix2/appendix2}
+% \include{Appendix1/appendix1}
+% \include{Appendix2/appendix2}
 
 \end{appendices}
 
