initial push for TAG architecture section

--- a/LiteratureReview/literatureReview.tex
+++ b/LiteratureReview/literatureReview.tex
@@ -4,3 +4,162 @@
 %*******************************************************************************
 
 \chapter{Literature Review}  %Title of the Literature Review
+
+\ifpdf
+    \graphicspath{{LiteratureReview/Figs/Raster/}{LiteratureReview/Figs/PDF/}{LiteratureReview/Figs/}}
+\else
+    \graphicspath{{LiteratureReview/Figs/Vector/}{LiteratureReview/Figs/}}
+\fi
+
+%********************************** %Introduction for literature review **************************************
+
+The literature review is split into 3 sections. The first section talks about the papers surveyed 
+for Unikernels and the 2nd section talks about papers surveyed for TAG based architectures and 
+the third sections talks about the possible incentives of combining them both which helps 
+answer the research questions stated (TODO: Add reference to research question section). 
+
+\section[TAG based architecture survey]{TAG based architecture survey}   
+The following was a survey conducted on exisisting TAG based implementations and the 
+recent survey based on TAG based architectures (//TODO add survey reference) published
+in 2022 was a good staring point to understand about various implementations of TAG
+based archtectures with the high level metrits and limitations. The following section 
+provides our own version of the Survey to help decide the best implementations 
+to answer the research questions (//TODO reference research questions chapter). 
+ 
+According to the TAG based architecture survey (//TODO add survey reference) there are 37 published
+efforts on TAG based architectures over the past decade and 20 published efforts preceding that. 
+
+\subsection{Timder}
+ Test text~\ref{weiser_timber-v_2019}
+%           FORMAT     
+% TODO 
+%  - Get bibtex file for references for TAG based architecture 
+%  - Start paragraph 
+%  - Build formatters  
+	
+\subsection{ARM MTE}
+\dots and some more \dots 
+
+\subsection{D-RI5CY}
+
+\subsection{TMDFI}
+
+\subsection{HyperFlow} 
+
+\subsection{SDMP}
+
+\subsection{Typed Architecture}
+
+\subsection{Dover}
+
+\subsection{Shakti-T}
+
+\subsection{HDFI}
+
+\subsection{lowRISC}
+
+\subsection{Taxi}
+
+\subsection{Pump}
+
+\subsection{CHERI}
+
+\subsection{SPARC M7/M8 SSM}
+
+\subsection{Low-Fat Pointers}
+
+\subsection{SAFE}
+
+\subsection{DataSafe}
+
+\subsection{Harmoni}
+
+\subsection{Shioya, et al.}
+
+\subsection{SIFT}
+
+\subsection{FlexCore}
+
+\subsection{Execution Leases}
+
+\subsection{GLIFT}
+
+\subsection{TIARA}
+
+\subsection{DIFT Coprocessor}
+
+\subsection{HardBound}
+
+\subsection{Loki}
+
+\subsection{FLexiTaint}
+
+\subsection{SECTAG}
+
+\subsection{Raksha}
+
+\subsection{SecureBit}
+
+\subsection{Minos}
+
+\subsection{DIFT}
+
+\subsection{RIFLE}
+
+\subsection{AEGIS}
+
+\subsection{Mondriaan}
+
+\subsection{Aries}
+
+\subsection{XOM}
+
+\subsection{M-Machine}
+
+\subsection{KCM}
+
+\subsection{SPUR}
+
+\subsection{Lisp Machine}
+
+\subsection{HEP}
+
+\subsection{Burroughs}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
