--- a/References/references.bib
+++ b/References/references.bib
@@ -1,390 +1,48 @@
 % ------------------------------------------------------------------------
-% SAMPLE BIBLIOGRAPHY FILE
-% ------------------------------------------------------------------------
-@misc{cve-2008-1368,
-  key =          {CVE-2008-1368},
-  title =        {Publication quality tables in \LaTeX*},
-  howpublished = {},
-  institution  = {NIST},
-  day =       17,
-  month =     {March},
-  year =         2008,
-  note =         {[online] \url{http://nvd.nist.gov/nvd.cfm?cvename=CVE-2008-1368}},
-  url = {http://nvd.nist.gov/nvd.cfm?cvename=CVE-2008-1368}
-}
-
-@MISC{prime-number-theorem,
-   author = "Charles Louis Xavier Joseph de la Vall{\'e}e Poussin",
-   note = "A strong form of the prime number theorem, 19th century" }
-
+% BIBLIOGRAPHY FILE
 % ------------------------------------------------------------------------
 
-@BOOK{texbook,
-   author = "Donald E. Knuth",
-   title= "The {{\TeX}book}",
-   publisher = "Addison-Wesley",
-   year = 1984 }
 
-@BOOK{latex,
-   author = "Leslie Lamport",
-   title = "{\LaTeX:} {A} Document Preparation System",
-   publisher = "Addison-Wesley",
-   year = 1986 }
-
-% ------------------------------------------------------------------------
-@article{Ancey1996,
-author = {Ancey, Christophe and Coussot, Philippe and Evesque, Pierre},
-journal = {Mechanics of Cohesive-frictional Materials},
-number = {4},
-pages = {385--403},
-title = {Examination of the possibility of a fluid-mechanics treatment of dense granular flows},
-url = {http://doi.wiley.com/10.1002/(SICI)1099-1484(199610)1:4<385::AID-CFM20>3.0.CO;2-0},
-volume = {1},
-year = {1996}
+% ---------------------------- TAG Based Architecture --------------------------
+% Timber 
+@inproceedings{weiser_timber-v_2019,
+	address = {San Diego, CA},
+	title = {{TIMBER}-{V}: {Tag}-{Isolated} {Memory} {Bringing} {Fine}-grained {Enclaves} to {RISC}-{V}},
+	isbn = {978-1-891562-55-6},
+	shorttitle = {{TIMBER}-{V}},
+	url = {https://www.ndss-symposium.org/wp-content/uploads/2019/02/ndss2019_10-3_Weiser_paper.pdf},
+	doi = {10.14722/ndss.2019.23068},
+	abstract = {Embedded computing devices are used on a large scale in the emerging internet of things (IoT). However, their wide deployment raises the incentive for attackers to target these devices, as demonstrated by several recent attacks. As IoT devices are built for long service life, means are required to protect sensitive code in the presence of potential vulnerabilities, which might be discovered long after deployment. Tagged memory has been proposed as a mechanism to enforce various ﬁne-grained security policies at runtime. However, none of the existing tagged memory schemes provides efﬁcient and ﬂexible compartmentalization in terms of isolated execution environments.},
+	language = {en},
+	urldate = {2022-10-12},
+	booktitle = {Proceedings 2019 {Network} and {Distributed} {System} {Security} {Symposium}},
+	publisher = {Internet Society},
+	author = {Weiser, Samuel and Werner, Mario and Brasser, Ferdinand and Malenko, Maja and Mangard, Stefan and Sadeghi, Ahmad-Reza},
+	year = {2019},
+	file = {Weiser et al. - 2019 - TIMBER-V Tag-Isolated Memory Bringing Fine-graine.pdf:files/5/Weiser et al. - 2019 - TIMBER-V Tag-Isolated Memory Bringing Fine-graine.pdf:application/pdf},
 }
 
-@BOOK{RR73,
- author={H. Radjavi and P. Rosenthal},
- title={Invariant {Subspaces}},
- publisher={Springer-Verlag},
- address={New York},
- year={1973},
+% ARM MTE 
+@misc{noauthor_1_nodate,
+	title = {1 {Armv8}.5-{A} {Memory} {Tagging} {Extension}},
+	url = {https://developer.arm.com/-/media/Arm%20Developer%20Community/ PDF/Arm_Memory_Tagging_Extension_Whitepaper.pdf?revision=ef3521b9-322c-4536-a800-5ee35a0e7665&la=en&hash= D510ED84099D3B8AA34723AC110D48E3A28FA8D6},
 }
 
-@BOOK{Aup91,
- author={B. Aupetit},
- title={A {Primer} on {Spectral} {Theory}},
- publisher={Springer-Verlag},
- address={New York},
- year={1991},
+% D-RISCY
+@inproceedings{palmiero_design_2018,
+	title = {Design and {Implementation} of a {Dynamic} {Information} {Flow} {Tracking} {Architecture} to {Secure} a {RISC}-{V} {Core} for {IoT} {Applications}},
+	doi = {10.1109/HPEC.2018.8547578},
+	abstract = {Security for Internet-of-Things devices is an increasingly critical aspect of computer architecture, with implications that spread across a wide range of domains. We present the design and implementation of a hardware dynamic information flow tracking (DIFT) architecture for RISC-V processor cores. Our approach exhibits the following features at the architecture level. First, it supports a robust and software-programmable policy that protects bare-metal applications against memory corruption attacks such as buffer overflows and format strings, without causing false alarms when running real-world benchmarks. Second, it is fast and transparent, having a small impact on applications performances and providing a fine-grain management of security tags. Third, it consists of a flexible design that can be easily extended for targeting new sets of attacks. We implemented our architecture on PULPino, an open-source platform that supports the design of different RISC-V cores targeting IoT applications. FPGA-based experimental results show that the overall overhead is low, with no impact on the processor performance and negligible storage increase.},
+	booktitle = {2018 {IEEE} {High} {Performance} extreme {Computing} {Conference} ({HPEC})},
+	author = {Palmiero, Christian and Di Guglielmo, Giuseppe and Lavagno, Luciano and Carloni, Luca P.},
+	month = sep,
+	year = {2018},
+	note = {ISSN: 2377-6943},
+	keywords = {Computer architecture, Hardware, Instruction sets, Registers, Security, Technological innovation},
+	pages = {1--7},
+	file = {IEEE Xplore Abstract Record:files/9/8547578.html:text/html},
 }
+% -----------------------------------------------------------------------------
 
-@BOOK{Dou72,
- author={R. G. Douglas},
- title={Banach {Algebra} {Techniques} in {Operator} {Theory}},
- publisher={Academic Press},
- address={New York},
- year={1972},
-}
-
-@BOOK{Hal82,
- author={P. R. Halmos},
- title={A {Hilbert} {Space} {Problem} {Book}},
- edition={Second},
- publisher={Springer-Verlag},
- address={New York},
- year={1982},
-}
-
-@BOOK{Rud73,
- author={W. Rudin},
- title={Functional {Analysis}},
- publisher={McGraw-Hill},
- address={New York},
- year={1973},
-}
-
-@BOOK{Con90,
- author={J. B. Conway},
- title={A {Course} in {Functional} {Analysis}},
- edition={Second},
- publisher={Springer-Verlag},
- address={New York},
- year={1990},
-}
-
-@BOOK{Con78,
- author={J. B. Conway},
- title={Functions of {One} {Complex} {Variable}},
- publisher={Springer-Verlag},
- address={New York},
- year={1978},
-}
-
-@BOOK{KR83,
- author={R. V. Kadison and J. R. Ringrose},
- title={Fundamentals of the {Theory} of {Operator} {Algebras},
-        {Part} {I}},
- publisher={Academic Press},
- address={New York},
- year={1983},
-}
-
-@BOOK{KR86,
- author={R. V. Kadison and J. R. Ringrose},
- title={Fundamentals of the {Theory} of {Operator} {Algebras},
-        {Part} {II}},
- publisher={Academic Press},
- address={New York},
- year={1986},
-}
-
-@INBOOK{SFPT,
- author={N. Dunford and J. T. Schwartz},
- title={Linear {Operators},
-        {Part} {I}: {General} {Theory}},
- pages={456},
- publisher={Interscience},
- address={New York},
- year={1957},
-}
-
-@BOOK{DS57,
- author={N. Dunford and J. T. Schwartz},
- title={Linear {Operators},
-        {Part} {I}: {General} {Theory}},
- publisher={Interscience},
- address={New York},
- year={1957},
-}
-
-@BOOK{Gan59,
- author={F. R. Gantmacher},
- title={Applications of the {Theory} of {Matrices}},
- publisher={Interscience},
- address={New York},
- year={1959},
-}
-
-@BOOK{Pau86,
- author={Vern I. Paulsen},
- title={Completely bounded maps and dilations},
- series={Pitman Research Notes in Mathematics Series},
- volume={146},
- publisher={Longman Scientific \& Technical},
- address={Harlow UK},
- year={1986},
-}
-
-@BOOK{Dav88,
- author={Kenneth R. Davidson},
- title={Nest algebras},
- series={Pitman Research Notes in Mathematics Series},
- volume={191},
- publisher={Longman Scientific \& Technical},
- address={Harlow UK},
- year={1988},
-}
-
-@BOOK{Spi65,
- author={Michael Spivak},
- title={Calculus on {Manifolds}},
- publisher={The Benjamin/Cummings Publishing Company},
- address={New York},
- year={1965},
-}
-
-@BOOK{Dev68,
- author={Allen Devinaz},
- title={Advanced {Calculus}},
- publisher={Holt, Rinehart and Winston},
- address={New York},
- year={1968},
-}
-
-@BOOK{Gam90,
- editor={R. V. Gamkerlidze},
- title={Analysis {I}{I}: {Convex} {Analysis} and
-        {Approximation} {Theory}},
- series={Encyclopaedia of Mathematical Sciences},
- volume={14},
- publisher={Springer-Verlag},
- address={New York},
- year={1990},
-}
-
-@BOOK{Hen93,
- author={Peter Henderson},
- title={Object-oriented specification and design with {C}$++$},
- publisher={McGraw-Hill},
- address={London},
- year={1993},
-}
-
-% ------------------------------------------------------------------------
-
-@ARTICLE{Rea85,
- author={C. J. Read},
- title={A solution to the invariant subspace problem on the space $l_1$},
- journal={Bull. London Math. Soc.},
- volume={17},
- year={1985},
- pages={305-317},
-}
-
-@ARTICLE{Enf87,
- author={P. Enflo},
- title={On the invariant subspaces problem for {Banach} spaces},
- journal={Acta. Math.},
- note={Seminare Maurey-Schwartz (1975-1976)},
- volume={158},
- year={1987},
- pages={213-313},
-}
-
-@ARTICLE{Dau75,
- author={J. Daughtry},
- title={An invariant subspace theorem},
- journal={Proc. Amer. Math. Soc.},
- volume={49},
- year={1975},
- pages={267-268},
-}
-
-@ARTICLE{KPS75,
- author={H. W. Kim and C. Pearcy and A. L. Shields},
- title={Rank-One Commutators and Hyperinvariant Subspaces},
- journal={Michigan Math. J.},
- volume={22},
- number={3},
- year={1975},
- pages={193-194},
-}
-
-% --------------------------------------------------------------------------
-
-@ARTICLE{Rad87,
- author={H. Radjavi},
- title={The {Engel}-{Jacobson} {Theorem} {Revisited}},
- journal={J. Alg.},
- volume={111},
- year={1987},
- pages={427-430},
-}
-
-@ARTICLE{MOR91,
- author={B. Mathes and M. Omladi\v{c} and H. Radjavi},
- title={Linear {Spaces} of {Nilpotent} {Operators}},
- journal={Linear Algebra Appl.},
- volume={149},
- year={1991},
- pages={215-225},
-}
-
-@ARTICLE{Lom73,
- author={V. I. Lomonosov},
- title={Invariant subspaces for operators commuting with compact
-        operators},
- journal={Functional Anal. Appl.},
- volume=7,
- year=1973,
- pages="213-214",
-}
-
-@ARTICLE{Lom91,
- author={V. I. Lomonosov},
- title={An extension of {Burnside}'s theorem to infinite
-        dimensional spaces},
- journal={Israel J. Math},
- volume=75,
- year=1991,
- pages="329-339",
-}
-
-@ARTICLE{Lom92,
- author={V. I. Lomonosov},
- title={On {Real} {Invariant} {Subspaces} of {Bounded} {Operators} with
-       {Compact} {Imaginary} {Part}},
- journal={Proc. Amer. Math. Soc.},
- volume=115,
- number=3,
- month=jul,
- year=1992,
- pages="775-777",
-}
-
-@ARTICLE{dB59,
- author={L. de Branges},
- title={The {Stone}-{Weierstrass} {Theorem}},
- journal={Proc. Amer. Math. Soc.},
- volume=10,
- year=1959,
- pages="822-824",
-}
-
-@ARTICLE{dB93,
- author={L. de Branges},
- title={A construction of invariant subspaces},
- journal={Math. Nachr.},
- volume=163,
- year=1993,
- pages="163-175",
-}
-
-@ARTICLE{AAB95,
- author={Y. A. Abramovich and C. D. Aliprantis and O. Burkinshaw},
- title={Another Characterization of the Invariant Subspace Problem},
- journal={Operator Theory in Function Spaces and Banach Lattices.
-          {\em The A.C.\,Zaanen Anniversary Volume},
-          Operator Theory: Advances and Applications},
- volume={75},
- year={1995},
- pages={15-31},
- note={Birkh\"auser Verlag},
-}
-
-@ARTICLE{LM65,
- author={Ju. I. Ljubi\v{c} and V. I. Macaev},
- title={On Operators with a Separable Spectrum},
- journal={Amer. Math. Soc. Transl. (2)},
- volume={47},
- year={1965},
- pages={89-129},
-}
-
-% ------------------------------------------------------------------------
-
-@MASTERSTHESIS{Sim90,
- author={A. Simoni\v{c}},
- title={Grupe Operatorjev s Pozitivnim Spektrom},
- school={Univerza v Ljubljani, FNT, Oddelek za Matematiko},
- year={1990},
-}
-
-@UNPUBLISHED{Sim91,
- author={A. Simoni\v{c}},
- title={Notes on {Subharmonic} {Functions}},
- note={Lecture Notes, Dalhousie University,
-       Department of Mathematics, Statistics, \& Computing Science},
- year={1991},
-}
-
-@ARTICLE{Sim92,
- author={A. Simoni\v{c}},
- title={Matrix {Groups} with {Positive} {Spectra}},
- journal={Linear Algebra Appl.},
- volume={173},
- year={1992},
- pages={57-76},
-}
-
-@PHDTHESIS{Sim94,
- author={A. Simoni\v{c}},
- title={An {Extension} of {Lomonosov's} {Techniques} to {Non}-{Compact}
-       {Operators}},
- school={Dalhousie University,
-         Department of Mathematics, Statistics, \& Computing Science},
- year={1994},
-}
-
-@ARTICLE{Sim96a,
- author={A. Simoni\v{c}},
- title={A {Construction} of {Lomonosov} {Functions} and
-       {Applications} to the {Invariant} {Subspace} {Problem}},
- journal={Pacific J. Math.},
- volume={175},
- pages={257-270},
- year={1996},
-}
-
-@ARTICLE{Sim96b,
- author={A. Simoni\v{c}},
- title={An extension of {Lomonosov's} {Techniques} to non-compact
-       {Operators}},
- journal={Trans. Amer. Math. Soc.},
- volume={348},
- pages={975-995},
- year={1996},
-}
 
 % ------------------------------------------------------------------------
