--- a/thesis.tex
+++ b/thesis.tex
@@ -168,6 +168,7 @@
 %\bibliographystyle{plainnat} % use this to have URLs listed in References
 \cleardoublepage
 \bibliography{References/references} % Path to your References.bib file
+\bibliography{References/TAG-based-architecture/TAG-based-architecture} % Path to your References.bib file
 
 
 % If you would like to use BibLaTeX for your references, pass `custombib' as
