--- a/LiteratureReview/literatureReview.tex
+++ b/LiteratureReview/literatureReview.tex
@@ -1,4 +1,4 @@
-%!TEX root = ../thesis.tex
+]%!TEX root = ../thesis.tex
 %*******************************************************************************
 %*********************************** Literature Review *****************************
 %*******************************************************************************
@@ -75,12 +75,79 @@ for IOT applications. The following are high level contributions:
 
 
 \subsection{HyperFlow} 
+It is a design and security implementation that offers security assurance because it is implemented 
+using a security-typed hardware description language. It allows complex information flow policies to 
+be configured at run time. The paper introduces ChiselFlow, a new secure hardware description language. 
+The contribution of the paper includes: 
+\begin{itemize}
+  \item Processor architecture and implementation designed for timing-safe information flow security. 
+  \item Complere RISC-V intruction set extended with intructions for information flow control. 
+  \item Verified at design time with a hardware description language. 
+  \item Novel representations of lattices that can be implemented in hardware efficiently. 
+\end{itemize}
+Hyperlow implements a nonmalleable IFC policy using tags.
+To eliminate timing side channels, the processor tracks the tag of the currently executing code and lushes caches,
+TLB, branch predictor, and other microarchitectural state on changes in the conidentiality or integrity tag of the
+running code. The modifications to avoid timing side channels seem more extensive than those to add tags. The
+authors report overheads in cycles per instruction of between 1% and 69%, largely due to padding the multiply
+operation to the worst-case number of cycles.
 
 \subsection{SDMP}
+This paper focuses on designing metadata tag based stack-protection security policies for general purpose tagged
+architecture. The policies specifically
+exploit the natural locality of dynamic program call graphs to
+achieve cacheability of the metadata rules that they require.
+The simple Return Address Protection policy has a performance
+overhead of 1.2\% but just protects return addresses.
+The two richer policies present, Static Authorities and Depth Isola-
+tion, provide object-level protection for all stack objects. When
+enforcing memory safety, The Static Authorities policy has a
+performance overhead of 5.7\% and our Depth Isolation policy
+has a performance overhead of 4.5\%.
+The contribution of the paper includes:
+\begin{itemize}
+  \item The formulation of a range of stack protection policies
+within the SDMP model.
+  \item Three optimizations for our stack policies: Lazy Tagging,
+Lazy Clearing and Cache Line Tagging.
+  \item The performance modeling results of our policies on
+a standard benchmark set, including the impact of our
+proposed optimizations.
+\end{itemize}  
 
 \subsection{Typed Architecture}
+This paper introduces Typed
+Architectures, a high-efficiency, low-cost execution sub-
+strate for dynamic scripting languages, where each data
+variable retains high-level type information at an ISA level.
+Typed Architectures calculate and check the dynamic type
+of each variable implicitly in hardware, rather than explicitly
+in software. Typed Architectures provide
+hardware support for flexible yet efficient type tag extraction
+and insertion, capturing common data layout patterns of tag-
+value pairs. The evaluation using a fully synthesizable RISC-
+V RTL design on FPGA shows that Typed Architectures
+achieve mean speedups of 11.2\% and 9.9\% with
+imum speedups of 32.6\% and 43.5\% for two production-
+grade scripting engines for JavaScript and Lua. 
+The contribution of the paper includes:
+\begin{itemize}
+  \item ISA extension to efficiently manage
+type tags in hardware, which can be flexibly applied to
+multiple scripting languages and engines.
+  \item Design and implement the Typed Architecture pipeline,
+which effectively reduces the overhead of dynamic type
+checking at low hardware cost.
+  \item Prototype the proposed processor architecture using 
+a fully synthesizable RTL model to execute two
+production-grade scripting engines with large inputs on
+FPGA (executing over 274 billion instructions in total)
+and provide a more accurate estimate of area and power
+using a TSMC 40nm standard cell library.
+\end{itemize}
 
 \subsection{Dover}
+
 
 \subsection{Shakti-T}
 
