--- a/ResearchQuestions/researchQuestions.tex
+++ b/ResearchQuestions/researchQuestions.tex
@@ -4,3 +4,14 @@
 %*******************************************************************************
 
 \chapter{Research Questions}  %Title of the Research Questions
+
+The following section talks about research questions: 
+
+\begin{itemize}
+    \item Which areas can Unikernels provide performance gains for TAG based architectures in comparison to the same implementation built using a monolithic OS? 
+    \item Does using Enclaves inside Unikernels provide a isolation mechanism within Unikernels, maintain lightweightness characterestics, and 
+    what would be the performance differnence between using Intel SGX and a open source implementation such as Timber V?
+    \item Due to lesser depencies in Unikernels does that mean lesser TAG policies are required for the appication ? 
+    \item Can Unikernel provide sufficient performance in such a way that a dedicated processor is not required for processing TAGS ?   
+    \item Does Unikernels with TAGS provide a secure and elastic environment ? 
+\end{itemize}
